# local-translator

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.py  check-omlx-result.txt  check-omlx.py  config.json  logger.py  main.py  prd:local-translator.md  pyproject.toml  translate.py
.history/: translations.json
docs/superpowers/plans/: 2026-05-11-local-translator.md
docs/superpowers/specs/: 2026-05-10-local-translator-design.md  2026-05-11-logging-design.md
templates/: index.html
tests/: conftest.py  test_app.py  test_translate.py
