[project]
name = "local-translator"
version = "0.1.0"
description = "基于 TranslateGemma-4B-it + oMLX 的本地翻译服务"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "requests>=2.33.1",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]
